# Patch_Matcher

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/patch_matcher/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/test/patch_matcher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  COperatorList.h  CustomWavetable.cpp  CustomWavetable.h  LevelGenerator.cpp  LevelGenerator.h  Operator.cpp  Operator.h  OutputTerminal.cpp  OutputTerminal.h  Ramp.cpp  SineWavetable.cpp  SineWavetable.h  SquareWavetable.cpp  SquareWavetable.h  TargetGenerator.cpp  TargetGenerator.h  Tester.cpp  Tester.h  Wavetable.cpp  Wavetable.h  WavetableOscillator.cpp  WavetableOscillator.h  native-lib.cpp
app/src/main/java/com/example/patch_matcher/: Connectable.java  ConnectorView.java  MainActivity.java  Operator.java  OperatorView.java  OutputTerminalView.java  RotaryKnobView.java
app/src/main/java/com/johnkasun/patch_matcher/: CampaignActivity.java  Connectable.java  ConnectorView.java  EvaluationActivity.java  GameActivity.java  MainActivity.java  MenuActivity.java  OperatorView.java  OutputTerminalView.java  PlayButtonView.java  RotaryKnobView.java  SettingsActivity.java  TutorialActivity.java  WavetableView.java
app/src/main/java/com/test/patch_matcher/: Connectable.java  ConnectorView.java  MainActivity.java  OperatorView.java  OutputTerminalView.java  RotaryKnobView.java
app/src/main/res/drawable/: trashcan.xml
app/src/main/res/layout/: activity_campaign.xml  activity_evaluation.xml  activity_game.xml  activity_main.xml  activity_menu.xml  activity_settings.xml  activity_tutorial.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/patch_matcher/: ExampleUnitTest.java
app/src/test/java/com/test/patch_matcher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
